# medi-note-ai

./: .dockerignore  .env.sample  .gitignore  ADMIN_DASHBOARD_IMPLEMENTATION.md  BACKEND_ARCHITECTURE_PRD.md  Dockerfile.unified  MIGRATION_GUIDE.md  README.md  UNIFIED_ARCHITECTURE.md  deploy-ec2-unified.sh  docker-compose.ai.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.unified.yaml  run-dev-unified.bat  run-dev-unified.sh  setup-ai-service.sh  start-ai-service.sh
ai_service/: .env.sample  Dockerfile  MIGRATION_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ai_service/api/: __init__.py  embeddings_api.py  ner_api.py  pii_api.py  soap_api.py
ai_service/app/: main.py
ai_service/app/api/: pii_api.py  soap_api.py
ai_service/app/config/: __init__.py  settings.py
ai_service/app/schemas/: __init__.py  ner_schemas.py  pii_schemas.py  soap_schemas.py
ai_service/app/services/: ner_service.py  pii_service.py  rag_service.py  soap_service.py
ai_service/config/: settings.py
ai_service/schemas/: ner_schemas.py  pii_schemas.py  rag_schemas.py
ai_service/services/: __init__.py  ner_service.py  pii_service.py  rag_service.py  soap_service.py
ai_service/utils/: __init__.py
backend/: .env.sample  BACKEND_TODO.md  DOCKER_PII_GUIDE.md  Dockerfile  alembic.ini  docker-compose.yaml  env.sample  pyproject-prod.toml  pyproject.toml  requirements-prod.txt  requirements.txt  run_migrations.py
backend/.cursor/: backend_prd.mdc  database_schema.mdc  file_structire.mdc
backend/alembic/: env.py
backend/alembic/versions/: 477ed4484f77_add_foreign_key_constraints_to_users_.py  5dbbc5ec085f_create_users_table.py  6fa2bcca9076_migrate_data_from_patients_and_.py  8a6d3b_add_created_by_professional_id_to_users.py  a1b2c3d4e5f6_change_embedding_dimension_to_768.py  a210d5660c59_initial_migration.py  aaa63f0bcc5f_initial_migration_create_all_tables_.py  b1c2d3e4f5g6_drop_all_and_recreate.py  b9306d2f354f_merge_migrations.py  bbb64f1dcc6f_add_missing_password_hash_column.py  ccc65f2dcc7f_add_text_extraction_fields.py  ddd66f3dcc8f_replace_s3_upload_link_with_file_path.py
backend/app/: main.py
backend/app/clients/: __init__.py  ai_service_client.py
backend/app/controllers/: auth_controller.py  document_controller.py  rag_controller.py  soap_controller.py  user_controller.py
backend/app/data/: patient_visit_sessions_repository.py  patients_repository.py  professional_repository.py  soap_notes_repository.py  uploaded_documents_repository.py
backend/app/database/: db.py  dep.py
backend/app/models/: __init__.py  patient_visit_sessions.py  patients.py  professional.py  session_soap_notes.py  uploaded_documents.py  users.py
backend/app/routes/: ai_embeddings_routes.py  ai_ner_routes.py  ai_pii_routes.py  ai_soap_routes.py  auth_routes.py  document_routes.py  patient_routes.py  professional_routes.py  rag_routes.py  session_routes.py  soap_routes.py  user_routes.py
backend/app/schemas/: __init__.py  auth_schemas.py  document_schemas.py  ner_schemas.py  pii_schemas.py  rag_schemas.py  soap_schemas.py  user_schemas.py
backend/app/services/: __init__.py  ai_provider_utils.py  ai_soap_service.py  authentication_service.py  document_pii_processor.py  document_service.py  document_storage.py  document_validation.py  ner_service.py  pdf_service.py  pii_service.py  rag_service.py  soap_generation_service.py  text_extraction.py  user_service.py
backend/app/services/ai/: __init__.py  ner_service.py  pii_service.py  rag_service.py  soap_service.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  next.config.ts  package-lock.json  package.json
frontend-react/: ADMIN_DASHBOARD_GUIDE.md  API_IMPLEMENTATION.md  CONVERSION_COMPLETE.md  DESIGN_SYSTEM.md  HOOKS_REFERENCE.md  MIGRATION_GUIDE.md  README.md  SETUP.md  eslint.config.js  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts
frontend-react/src/: App.tsx  index.css  main.tsx  theme.ts
frontend-react/src/components/: AccountMenu.tsx  EmptyState.tsx  Layout.tsx  Loading.tsx  Logo.tsx  Navbar.tsx  ProtectedRoute.tsx  PublicRoute.tsx
frontend-react/src/components/admin/: AdminAccessButton.tsx  AdminSidebar.tsx  AdminStatsCard.tsx  DocumentsManagement.tsx  PatientsManagement.tsx  SessionsManagement.tsx  SystemSettings.tsx  UsersManagement.tsx  index.ts
frontend-react/src/components/auth/: AuthHeader.tsx  RegisterFormActions.tsx  RegisterFormFields.tsx  index.ts
frontend-react/src/components/dashboard/: QuickActionCard.tsx  SectionHeader.tsx  StatCard.tsx
frontend-react/src/components/home/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  StatsSection.tsx  TestimonialsSection.tsx  WorkflowSection.tsx  index.ts
frontend-react/src/components/modals/: AddPatientModal.tsx  AddSessionModal.tsx  LoginModal.tsx  SignupModal.tsx  index.ts
frontend-react/src/components/navigation/: MobileNavigation.tsx
frontend-react/src/components/patients/: PatientInfoForm.tsx  VisitsTable.tsx  (+3 more)
frontend-react/src/contexts/: AuthContext.tsx  AuthModalsContext.tsx
frontend-react/src/hooks/: index.ts  useAuthApi.ts  useDocumentsApi.ts  usePatientsApi.ts  useProfessionalsApi.ts  useRagApi.ts  useSessionsApi.ts  useSoapApi.ts  useUsersApi.ts
frontend-react/src/layouts/: Layout.tsx  ResponsiveLayout.tsx
frontend-react/src/lib/: api-config.ts  auth.ts  documents.ts  index.ts  patients.ts  professionals.ts  rag.ts  sessions.ts  soap.ts  users.ts
frontend-react/src/pages/: HomePage.tsx
frontend-react/src/theme/: index.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/patients/: page.tsx
frontend/app/register/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/ui/: card.tsx  loading.tsx
frontend/lib/: api-config.ts
frontend/routes/: auth.ts  documents.ts  index.ts  patients.ts  professionals.ts  rag.ts  sessions.ts  soap.ts  users.ts
nginx/: nginx.conf
(+61 files in other folders)
