[project]
name = "ai-service"
version = "0.1.0"
description = "Echo Notes AI Service - Microservice for ML/LLM operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database & ORM (shared with main backend)
    "sqlalchemy>=2.0.23",
    "psycopg[binary]>=3.1.12",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.3",
    
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # AI & Language Processing
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.6.0",
    
    # HuggingFace for AI models
    "huggingface_hub",
    "transformers>=4.35.0,<4.45.0",
    "torch>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    
    # PII Detection & Anonymization
    "presidio-analyzer>=2.2.359,<2.3.0",
    "presidio-anonymizer>=2.2.357,<2.3.0",
    "spacy>=3.7.0,<3.9.0",
    
    # HTTP Client & Async Operations
    "httpx>=0.25.2",
    "aiofiles>=23.2.0",
    
    # Logging & Monitoring
    "structlog>=23.2.0,<24.0.0",
    
    # Async & Concurrency
    "anyio>=4.1.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Development & Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
