[project]
name = "ai-service"
version = "0.1.0"
description = "Echo Notes AI Service - Microservice for ML/LLM operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database & ORM (shared with main backend)
    "sqlalchemy>=2.0.23",
    "psycopg[binary]>=3.1.12",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.3",
    
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # AI & Language Processing
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    
    # NOTE: Legacy local fallbacks for OpenAI/HuggingFace (langchain-openai, openai,
    # huggingface_hub, transformers, torch, numpy) have been removed from the
    # default dependency list. This service uses Google Gemini as the primary
    # provider. If you need to enable local/legacy providers, add them back to
    # this list or manage them in an environment-specific extras group.
    
    # NOTE: Presidio/spaCy were previously optional fallbacks for PII detection.
    # Removed here in favor of the primary Google Gemini implementation used
    # by this service. If you reintroduce a local PII fallback, add the
    # dependencies back and update the PII service accordingly.
    
    # HTTP Client & Async Operations
    "httpx>=0.25.2",
    "aiofiles>=23.2.0",
    
    # Logging & Monitoring
    "structlog>=23.2.0,<24.0.0",
    
    # Async & Concurrency
    "anyio>=4.1.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Development & Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
