[project]
name = "backend"
version = "0.1.0"
description = "Echo Notes Backend - AI-Powered SOAP Note Generation System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg[binary]>=3.1.12",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.3",
    
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Security & Authentication
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.8",
    "python-dotenv>=1.0.0",
    
    # AI & Language Processing (ESSENTIAL ONLY)
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.6.0",
    
    # HuggingFace (ESSENTIAL - with compatible versions)
    "huggingface_hub",
    "transformers>=4.35.0,<4.45.0",
    "numpy>=1.24.0,<2.0.0",
    
    # PII Detection & Anonymization (with compatible versions)
    "presidio-analyzer>=2.2.359,<2.3.0",
    "presidio-anonymizer>=2.2.357,<2.3.0", 
    "spacy>=3.7.0,<3.9.0",
    
    # Document Processing (compatible versions)
    "pypdf2>=3.0.1,<4.0.0",
    "python-docx>=0.8.11,<1.0.0", 
    "python-multipart>=0.0.6,<1.0.0",
    
    # HTTP Client & File Handling
    "httpx>=0.25.2",
    "aiofiles>=23.2.0",
    
    # AWS S3 Integration (ESSENTIAL - Used for document storage)
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    
    # Essential Utils (compatible versions)
    "structlog>=23.2.0,<24.0.0",
    "anyio>=4.1.0,<5.0.0",
    "greenlet>=3.2.4,<4.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "reportlab>=4.4.3,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Development & Testing (optional for development)
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "rich>=13.7.0",
]

unused = [
    # Removed from production (available if needed)
    "langchain>=0.1.0",           # Only using langchain-core
    "langchain-community>=0.0.10", # Not used
    "langchain-huggingface>=0.0.1", # Not used (using huggingface_hub directly)
    "pinecone>=3.0.0",           # Not needed - using pgvector instead
]
